--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "yt-search": "^0.4.1",
-    "ytdl-core":"*"
+    "ytdl-core": "*"
   },
   "scripts": {
-    "start":"node ."
+    "start": "node ."
   }
 }
