--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "yt-search": "^0.4.1",
-    "ytdl-core": "*"
+    "ytdl-core": "^0.29.7"
   },
   "scripts": {
     "start": "node ."
