--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "routex": "github:barelyhuman/routex",
     "yt-search": "^1.1.2",
     "ytdl-core": "^2.1.5"
   },
   "scripts": {
-    "start": "node ."
+    "start": "routex ."
   }
 }
