--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "routex": "github:barelyhuman/routex#canary",
+    "ftrouter": "github:barelyhuman/ftrouter#0.0.2",
     "yt-search": "^2.0.1",
     "ytdl-core": "^2.1.5"
   },
   "scripts": {
-    "start": "routex -d ./routes -p $PORT"
+    "start": "ftrouter -d ./routes -p $PORT"
   }
 }
