--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "orion-server",
+  "name": "music-server",
   "version": "1.0.0",
-  "main": "src/server.js",
   "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "ftrouter": "github:barelyhuman/ftrouter#0.0.2",
-    "yt-search": "^2.0.1",
-    "ytdl-core": "4.2.1"
-  },
   "scripts": {
-    "start": "ftrouter -d ./routes -p $PORT"
+    "build": "rimraf dist && NODE_ENV=production babel src -d dist",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.js",
+    "fix": "npx standard --fix"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.13.10",
+    "@babel/node": "^7.13.10",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/preset-env": "^7.13.10",
+    "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "ftrouter": "barelyhuman/ftrouter",
+    "yt-search": "^2.7.3",
+    "ytdl-core": "^4.5.0"
   }
 }
