--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ftrouter": "barelyhuman/ftrouter",
+    "spotify-web-api-node": "^5.0.2",
     "yt-search": "^2.7.3",
     "ytdl-core": "^4.5.0"
   }
