--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ftrouter": "barelyhuman/ftrouter",
+    "p-map": "^4.0.0",
     "spotify-web-api-node": "^5.0.2",
     "yt-search": "^2.7.3",
     "ytdl-core": "^4.5.0"
