--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "p-map": "^4.0.0",
     "spotify-web-api-node": "^5.0.2",
     "yt-search": "^2.7.3",
-    "ytdl-core": "^4.5.0"
+    "ytdl-core": "^4.5.0",
+    "ytsr": "^3.3.1"
   }
 }
