--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rimraf dist && NODE_ENV=production babel src -d dist",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.js",
-    "fix": "npx standard --fix"
+    "fix": "standard --fix || true"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
@@ -14,7 +14,10 @@
     "@babel/node": "^7.13.10",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-env": "^7.13.10",
-    "rimraf": "^3.0.2"
+    "husky": "=4",
+    "lint-staged": ">=10",
+    "rimraf": "^3.0.2",
+    "standard": "^16.0.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -25,5 +28,13 @@
     "yt-search": "^2.7.3",
     "ytdl-core": "^4.5.0",
     "ytsr": "^3.3.1"
+  },
+  "lint-staged": {
+    "*.{js}": "npm run fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
