--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "standard": "^16.0.3"
   },
   "dependencies": {
+    "@barelyreaper/conch": "^0.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ftrouter": "barelyhuman/ftrouter",
