--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.13.10",
     "husky": "=4",
     "lint-staged": ">=10",
+    "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "standard": "^16.0.3"
   },
@@ -27,7 +28,7 @@
     "p-map": "^4.0.0",
     "spotify-web-api-node": "^5.0.2",
     "yt-search": "^2.7.6",
-    "ytdl-core": "^4.5.0",
+    "ytdl-core": "^4.7.0",
     "ytsr": "^3.4.1"
   },
   "lint-staged": {
