--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "build": "rimraf dist && NODE_ENV=production babel src -d dist",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.js",
-    "fix": "standard --fix || true"
+    "fix": "standard --fix || true",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.13.10",
-    "@babel/node": "^7.13.10",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/preset-env": "^7.13.10",
-    "husky": "=4",
-    "lint-staged": ">=10",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "husky": "=6",
+    "lint-staged": ">=11",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "standard": "^16.0.3"
@@ -23,20 +24,15 @@
   "dependencies": {
     "@barelyreaper/conch": "^0.0.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "ftrouter": "barelyhuman/ftrouter",
-    "p-map": "^4.0.0",
+    "p-map": "^5.0.0",
     "spotify-web-api-node": "^5.0.2",
     "yt-search": "^2.9.0",
-    "ytdl-core": "^4.8.2",
+    "ytdl-core": "^4.8.3",
     "ytsr": "^3.5.0"
   },
   "lint-staged": {
     "*.{js}": "npm run fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
